[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Miscoto"
dynamic = ["version"]
authors = [{name = "Clemence Frioux", email = "clemence.frioux@inria.fr"}]
readme = "README.md"
description = "Microbiome Screening and COmmunity selection using TOpology"
license = {text = "LGPL-3.0-or-later"}
dependencies = [
  'clyngor_with_clingo',
  'clyngor'
]

classifiers =[
  'Programming Language :: Python :: 3.6',
  'Programming Language :: Python :: 3.7',
  'Programming Language :: Python :: 3.8',
  'Operating System :: MacOS :: MacOS X',
  'Operating System :: Unix',
]

[project.scripts]
miscoto = "miscoto.__main__:main"

[project.urls]
Homepage = "https://github.com/cfrioux/miscoto"
Changelog = "https://github.com/cfrioux/miscoto/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ['miscoto']
package-dir = {'miscoto' = 'miscoto'}
package-data = {'miscoto' = ['encodings/*.lp']}

[tool.setuptools.dynamic]
version = { attr = "miscoto.__version__" }
dependencies = {file = ["requirements.txt"]}
